--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  font-family: "Krub", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
